# talk-hack-the-universe

./: .gitignore  .travis.yml  ABSTRACT.md  LICENSE  Makefile  Makefile.am  PITCHME.md  PITCHME.yaml  README.md  SECURITY.md  Shmoo_16_radio_Astro.rst  bootstrap.sh  configure.ac  hack_the_universe.txt
.github/workflows/: latex.yaml  main.yml
aclocal/latex-m4/: README
assets/css/: PITCHME.css
docker/: Dockerfile  docker-compose.yml
python/: requirements-test.txt  requirements.txt  setup.py  tox.ini
shmoo_firetalks/: PITCHME.md  README.md
short_version/: PITCHME.md  README.md  hack_the_universe.txt
src/: requirements.txt
talk/: Makefile.am  hack-the-universe.tex  preamble.tex
tests/: README.md
